add notifications, modals and create-account logic

--- a/src/app/components/contacts/contacts-table/contacts-table.component.html
+++ b/src/app/components/contacts/contacts-table/contacts-table.component.html
@@ -79,6 +79,6 @@
     </div>
   </div>
 </div>
-<div class="icon-wrapper" *ngIf="loading">
+<div class="icon-wrapper" *ngIf="isLoading">
   <fa-icon [icon]="['fas', 'spinner']" [spin]="true"></fa-icon>
 </div>
