--- a/src/assets/scss/styles/reset/index.scss
+++ b/src/assets/scss/styles/reset/index.scss
@@ -2,6 +2,7 @@
 @import './input.scss';
 @import './href.scss';
 @import './button.scss';
+@import './ng-autocompete.scss';
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
