--- a/src/app/containers/admin/admin.component.scss
+++ b/src/app/containers/admin/admin.component.scss
@@ -1,4 +1,4 @@
-.main-wrapper {
+.admin-wrapper {
   width: 100vw;
   height: 100vh;
 
@@ -7,7 +7,7 @@
 
   background-color: #f3f3f4;
 
-  app-main-header {
+  app-header {
     z-index: 2;
   }
 
