--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -10,7 +10,7 @@
     height: 57px;
     width: 57px;
 
-    background-color: #6E7A7F;
+    background-color: rgba(110, 122, 127, 0.8);
 
     border-radius: 50%;
 
