--- a/src/app/components/admin/header/header.component.scss
+++ b/src/app/components/admin/header/header.component.scss
@@ -1,3 +1,5 @@
+@import '~assets/scss/variables/index.scss';
+
 header {
   display: flex;
   justify-content: space-between;
@@ -5,13 +7,13 @@ header {
 
   padding: 5px;
 
-  background-color: #D32F2F;
+  background-color: $red;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
-  color: white;
+  color: $white;
 
   .icon-wrapper {
     padding: 15px;
-    background-color: #BC2424;
+    background-color: $dark_red;
   }
 }
