--- a/src/app/components/admin/sidebar/sidebar.component.scss
+++ b/src/app/components/admin/sidebar/sidebar.component.scss
@@ -1,7 +1,9 @@
+@import '~assets/scss/variables/index.scss';
+
 aside {
   z-index: 1;
   height: 100%;
-  background-color: #fff;
+  background-color: $white;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.2),
     0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -23,7 +25,7 @@ aside {
         }
 
         &.active {
-          border-left-color: #D32F2F;
+          border-left-color: $red;
           font-weight: bold;
         }
       }
@@ -38,7 +40,7 @@ aside {
         }
 
         span {
-          color: #fff;
+          color: $white;
         }
       }
 
