--- a/src/app/components/contacts/contacts-filter/contacts-filter.component.scss
+++ b/src/app/components/contacts/contacts-filter/contacts-filter.component.scss
@@ -1,59 +1,99 @@
-  form {
-    width: 100%;
+@import '~assets/scss/variables/index.scss';
 
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.16);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.16);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.16);
+form {
+  width: 100%;
 
-    background-color: #F3F3F4;
-    padding: 10px 8px;
-    display: flex;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.16);
 
-    border-radius: 5px;
+  background-color: #F3F3F4;
+  padding: 10px 8px;
+  display: flex;
 
-    .input-wrapper {
-      position: relative;
-      flex: 1;
+  border-radius: 5px;
 
-      input {
-        color: #373A3C;
-        width: 100%;
-        font-size: 14px;
-        padding: 7px 0px 7px 12px;
-        border-radius: 5px 0px 0px 5px;
-        border: 1px solid #DDDDDD;
-      }
+  .input-wrapper {
+    position: relative;
+    flex: 1;
 
-      .icon-wrapper {
-        position: absolute;
-        top: 0;
-        right: 10px;
-
-        height: 100%;
-
-        display: flex;
-        align-items: center;
-
-        fa-icon {
-          color: #DDDDDD;
-          cursor: pointer;
-        }
-      }
+    input {
+      color: #373A3C;
+      width: 100%;
+      padding: 7px 0px 7px 12px;
+      border-radius: 5px 0px 0px 5px;
+      border: 1px solid $light_grey;
     }
 
-    button {
-      background-color: #E6E6E6;
-      padding: 0px 8px;
+    .icon-wrapper {
+      position: absolute;
+      top: 0;
+      right: 10px;
 
-      border: 1px solid #DDDDDD;
+      height: 100%;
 
-      border-radius: 0px 5px 5px 0px;
-      border-left: none;
+      display: flex;
+      align-items: center;
 
       fa-icon {
-        font-size: 14px;
-        color: #777777;
-        vertical-align: middle;
+        color: $light_grey;
+        cursor: pointer;
       }
     }
   }
+
+  button {
+    background-color: #E6E6E6;
+    padding: 0px 8px;
+
+    border: 1px solid $light_grey;
+
+    border-radius: 0px 5px 5px 0px;
+    border-left: none;
+
+    fa-icon {
+      font-size: 14px;
+      color: #777777;
+      vertical-align: middle;
+    }
+  }
+}
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: $xs_max) {
+  .input-wrapper input {
+    font-size: 8px;
+  }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: $sm_min) and (max-width: $sm_max) {
+  .input-wrapper input {
+    font-size: 10px;
+  }
+
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: $md_min) and (max-width: $md_max) {
+  .input-wrapper input {
+    font-size: 12px;
+  }
+
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: $lg_min) and (max-width: $lg_max) {
+  .input-wrapper input {
+    font-size: 14px;
+  }
+
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: $xl_min) {
+  .input-wrapper input {
+    font-size: 14px;
+  }
+
+}
