--- a/src/app/components/shared/input-phone/input-phone.component.scss
+++ b/src/app/components/shared/input-phone/input-phone.component.scss
@@ -54,6 +54,8 @@
         border: 1px solid #dddddd;
         background-color: white;
 
+        cursor: pointer;
+
         fa-icon {
           display: none;
           font-size: 7px;
