--- a/src/app/pages/contacts/contacts.component.html
+++ b/src/app/pages/contacts/contacts.component.html
@@ -3,7 +3,7 @@
    <app-contacts-filter [isLoading$]="isLoading$"></app-contacts-filter>
    <app-contacts-table [contacts$]="contacts$" [isLoading$]="isLoading$"></app-contacts-table>
 
-   <div class="icon-wrapper" (click)="openCreateContact()">
+   <div class="icon-wrapper shadow" (click)="openCreateContact()">
      <fa-icon [icon]="['fas', 'plus']"></fa-icon>
    </div>
 
