--- a/src/app/pages/contacts/contacts.component.scss
+++ b/src/app/pages/contacts/contacts.component.scss
@@ -1,11 +1,14 @@
+@import '~assets/scss/variables/index.scss';
+
 .contacts {
   height: 100%;
   overflow: auto;
 
   .icon-wrapper {
     position: absolute;
-    right: 25px;
+
     bottom: 25px;
+    right: 25px;
 
     height: 57px;
     width: 57px;
@@ -35,25 +38,37 @@
   }
 }
 
-@media (max-width: 767.98px) {
+
+// Extra small devices (portrait phones, less than 576px)
+@media (max-width: $xs_max) {
   .contacts {
     padding: 10px 8px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 991.98px) {
+// Small devices (landscape phones, 576px and up)
+@media (min-width: $sm_min) and (max-width: $sm_max) {
   .contacts {
     padding: 10px;
   }
 }
 
-@media (min-width: 992px) and (max-width: 1199.98px) {
+// Medium devices (tablets, 768px and up)
+@media (min-width: $md_min) and (max-width: $md_max) {
   .contacts {
-    padding: 15px;
+    padding: 10px;
   }
 }
 
-@media (min-width: 1200px) {
+// Large devices (desktops, 992px and up)
+@media (min-width: $lg_min) and (max-width: $lg_max) {
+  .contacts {
+    padding: 10px;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: $xl_min) {
   .contacts {
     padding: 15px;
   }
